2013-01-14  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/tawny/memorise.clj: Initial implementation of library for
	remembering symbols generated from OWL files.

	* src/tawny/polyglot.clj: Initial implementation of library for 
	multi-lingual support.


2012-12-10  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/owl/owl.clj: Improved the implementation of remove-entity to
	use the OWL API directly. This should also improve the apperance
	of classes in repl.

2012-12-07  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* project.clj: 0.3 update with first 1.3.6.1

2012-11-24  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/owl/import.clj: Import mechanism added, reading an OWL file
	(or stream, url or so on), and pulling all items into the current
	namespace, so that they can be refered to by other clojure-owl
	files. Functions can be supplied to filter the file for desired
	entities and to transform the files into valid lisp symbols. 

2012-11-18  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/owl/render.clj: Start of a framework for pretty printing
	of OWL entities

2012-11-13  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/owl/owl.clj: Default ontology is now bound into the
	namespace. Modifiying ontologies in two namespaces now works as
	expected rather than adding which ever defontology was evaled
	last.


2012-11-16  Phillip Lord  <phillip.lord@newcastle.ac.uk>

	* src/owl/owl.clj: Now handles prefixes for all the ontologies
	that have been loaded.